--- a/src/app/components/header/header.component.scss
+++ b/src/app/components/header/header.component.scss
@@ -79,6 +79,34 @@ header{
                     
                 }
 
+                .socials{
+                    border-left: 1px solid $colorBlue;
+                    margin-left: 5px;
+
+                    li{
+                        margin-left: 25px;
+
+                        a{
+                            padding: 0;
+                            border-radius: 0;
+                            
+                            &:hover{
+                                background-color: white;
+                                color: #15385c;
+                                
+                                i{
+                                    transform: translateY(-10px);
+                                }
+                            }
+
+                            i{
+                                font-size: 1.15em;
+                            }
+                            
+                        }
+                    }   
+                }
+
                 button{
                     border: none;
                     background: none;
@@ -174,27 +202,34 @@ header{
         }
     }
 
-    p-sidebar{
-        display:none;
-        .p-sidebar-right{
-            background: #15385d;
-            .p-sidebar-header{
-                .p-sidebar-icon{
-                    color: white;
-                }
+    p-dialog{
+
+        .p-dialog{
+            margin: 0 !important;
+            width: 100%;
+            padding-bottom: 0;
+
+            .p-dialog-header{
+                display: none;
             }
-            .p-sidebar-content{
+
+            .p-dialog-content{
                 height: 100%;
                 padding-top: 35px !important;
                 display: flex;
                 flex-direction: column;
                 justify-content: space-between;
                 width: 100%;
+                background-color: #15385c;
+                border-top: 2px solid white;
+                padding: 20px;
 
                 nav{
                     display: flex;
                     flex-direction: column;
                     align-items: flex-end;
+                    padding-bottom: 7em;
+                    
                     ul{
                         list-style: none;
                         li{
@@ -323,15 +358,35 @@ header{
             }
         }
     }
+
 }
 
-.p-sidebar-mask.p-component-overlay {
+p-dialog .p-dialog-mask.p-component-overlay {
     z-index: 12 !important ;
     position: fixed;
-    top: 0;
+    top: 4.5em;
     left: 0;
     width: 100%;
     height: 100%;
+}
+
+@media all and (max-width: 1010px){
+
+    header{
+        height: 4.5em;
+
+        .content{
+
+            .header-right{
+
+                nav{
+                    .socials{
+                        display: none;
+                    }
+                }
+            }
+        }
+    }
 }
 
 @media all and (max-width: 960px){
