--- a/src/app/components/home-about/home-about.component.scss
+++ b/src/app/components/home-about/home-about.component.scss
@@ -33,7 +33,7 @@ $color: #15385c;
             margin: 10px 0 30px 0;
         }
 
-        a{
+        button{
             text-decoration: none;
             padding: 10px 15px;
             background: white;
