--- a/src/app/components/home-program/home-program.component.scss
+++ b/src/app/components/home-program/home-program.component.scss
@@ -1,6 +1,7 @@
 .program{
     display: flex;
     width: 100%;
+    flex-direction: row;
     align-items: center;
     justify-content: center;
     margin: 40px 0 80px 0;
