--- a/src/app/components/home-about/home-about.component.html
+++ b/src/app/components/home-about/home-about.component.html
@@ -3,6 +3,7 @@
     <div class="texts">
         <h2 class="header">Conférence de presse pour l'annonce de candidature</h2>
         <p>Le 05 novembre 2022 à 10h00, Yves Tsala prononçait une allocution suite au dépôt de sa candidature aux élections du bureau national fédéral de la fecabasket. Il s’est exprimé dans la  salle VIP au Palais des Sports de Yaoundé, puis devant la foule présente devant les lieux.</p>
-        <a href="https://youtu.be/8F1pCiB3n5o" target="_blank">Regarder la vidéo</a>
+        <button (click)="showVideo('https://www.youtube.com/embed/8F1pCiB3n5o')">Regarder la vidéo</button>
     </div>
+    
 </div>
