--- a/src/app/components/office-member-details/office-member-details.component.html
+++ b/src/app/components/office-member-details/office-member-details.component.html
@@ -28,42 +28,55 @@
             </div>
         </div>
 
-        <div class="bottom">
+        <ng-template [ngIf]="officeMemberData.inProgress == false" [ngIfElse]="empty">
 
-            <div class="skills">
-                <p class="header">Compétences</p>
-                <ng-template ngFor let-skill [ngForOf]="officeMemberData.skills">
-                    <div class="skill">
-                        <p>{{skill.label}}</p>
-                        <ul>
-                            <ng-template ngFor let-list [ngForOf]="skill.list">
-                                <li> {{list.paragraph}} </li>
-                            </ng-template>
-                        </ul>
-                    </div>
-                </ng-template>
-            </div>
+            <div class="bottom">
 
-            <div class="project">
-                <p class="header">Mon Projet</p>
-                <ng-template ngFor let-project [ngForOf]="officeMemberData.project">
-                    <p class="paragraphe"> {{project.paragraph}} </p>
-                </ng-template>
+                <div class="skills">
+                    <p class="header">Compétences</p>
+                    <ng-template ngFor let-skill [ngForOf]="officeMemberData.skills">
+                        <div class="skill">
+                            <p>{{skill.label}}</p>
+                            <ul>
+                                <ng-template ngFor let-list [ngForOf]="skill.list">
+                                    <li> {{list.paragraph}} </li>
+                                </ng-template>
+                            </ul>
+                        </div>
+                    </ng-template>
+                </div>
+    
+                <div class="project">
+                    <p class="header">Mon Projet</p>
+                    <ng-template ngFor let-project [ngForOf]="officeMemberData.project">
+                        <p class="paragraphe"> {{project.paragraph}} </p>
+                    </ng-template>
+                </div>
+    
+                <div class="expectation">
+                    <p class="header">Mes Attentes</p>
+                    <ng-template ngFor let-expectation [ngForOf]="officeMemberData.expectation">
+                        <p class="paragraphe"> {{expectation.paragraph}} </p>
+                    </ng-template>
+                </div>
+    
+                <div class="pathway">
+                    <p class="header">Mon Parcours</p>
+                    <ng-template ngFor let-pathway [ngForOf]="officeMemberData.pathway">
+                        <p class="paragraphe"> {{pathway.paragraph}} </p>
+                    </ng-template>
+                </div>
             </div>
+        </ng-template>
 
-            <div class="expectation">
-                <p class="header">Mes Attentes</p>
-                <ng-template ngFor let-expectation [ngForOf]="officeMemberData.expectation">
-                    <p class="paragraphe"> {{expectation.paragraph}} </p>
-                </ng-template>
-            </div>
+        <ng-template #empty>
 
-            <div class="pathway">
-                <p class="header">Mon Parcours</p>
-                <ng-template ngFor let-pathway [ngForOf]="officeMemberData.pathway">
-                    <p class="paragraphe"> {{pathway.paragraph}} </p>
-                </ng-template>
+            <div class="bottom">
+                <p style="margin: auto; font-size: 1.2em; margin-top: 50px; margin-bottom: 100px; text-align: center;">Contenu en cours d'édition ...</p>
             </div>
-        </div>
+        </ng-template>
+
+
+        
     </div>
 </div>
