--- a/src/app/components/program/program.component.scss
+++ b/src/app/components/program/program.component.scss
@@ -5,8 +5,6 @@ $colorBlue: #15385c;
     justify-content: center;
     align-items: center;
     flex-direction: column;
-    min-height: 100vh;
-    padding-bottom: 10em;
 
     .title{
         width: 100%;
@@ -76,7 +74,7 @@ $colorBlue: #15385c;
             margin: 60px 0;
 
             .video{
-                width: 30%;
+                width: 300px;
                 height: fit-content;
                 cursor: pointer;
                 position: relative;
@@ -151,6 +149,8 @@ $colorBlue: #15385c;
             height: fit-content;
             overflow: hidden;
             box-shadow: rgba(50, 50, 93, 0.25) 0px 6px 12px -2px, rgba(0, 0, 0, 0.3) 0px 3px 7px -3px;
+            background: #15385d;
+            color: white;
 
             img{
                 width: 330px;
@@ -226,7 +226,7 @@ $colorBlue: #15385c;
 }
 
 
-    @media all and (max-width: 1020px){
+    @media all and (max-width: 1370px){
 
         .program{
     
@@ -242,7 +242,6 @@ $colorBlue: #15385c;
                     .video{
 
                         flex: 1 0 auto;
-                        width: 300px;
                         margin: 0 10px;
                         &::after{
                             height: 200px;
@@ -345,7 +344,8 @@ $colorBlue: #15385c;
                 align-items: center;
                 box-shadow: none;
                 overflow: unset;
-
+                padding: 12px;
+                
                 img{
                     border-radius: 5px;
                     width: 335px;
