--- a/src/app/components/home-about/home-about.component.scss
+++ b/src/app/components/home-about/home-about.component.scss
@@ -22,7 +22,8 @@ $color: #15385c;
         background-color: white;
         padding: 25px 25px;
         left: 45%;
-        box-shadow: rgba(0, 0, 0, 0.05) 0px 0px 0px 1px;
+        border: 3px solid #15385c;
+        box-shadow: rgba(50, 50, 93, 0.25) 0px 13px 27px -5px, rgba(0, 0, 0, 0.3) 0px 8px 16px -8px;
 
         .header{
 
@@ -36,16 +37,16 @@ $color: #15385c;
         button{
             text-decoration: none;
             padding: 10px 15px;
-            background: white;
-            color: $color;
+            background: $color;
+            color: white;
             border-radius: 3px;
             border: 2px solid $color;
             transition: all 0.2s ease-in;
             cursor: pointer;
 
             &:hover{
-                background-color: $color;
-                color: white;
+                background-color: white;
+                color: $color;
             }
         }
     }
