--- a/src/app/components/program-summary/program-summary.component.scss
+++ b/src/app/components/program-summary/program-summary.component.scss
@@ -71,8 +71,8 @@
                     }
                 }
 
-                fa-icon:last-child{
-                    color: #00000094;
+                fa-icon{
+                    color: white;
                 }
 
                 &:last-child{
