--- a/src/app/components/office-member-details/office-member-details.component.scss
+++ b/src/app/components/office-member-details/office-member-details.component.scss
@@ -8,6 +8,7 @@
       .p-dialog-header {
 
         padding: 10px;
+        background: #15385d;
 
         .p-dialog-header-icons {
             border-radius: 50%;
@@ -29,10 +30,10 @@
     max-height: 75vh;
     display: flex;
     justify-content: flex-start;
+    background: #15385c;
 
     .content{
         width: 100%;
-        padding: 0 55px;
         height: 100%;
         display: flex;
         flex-direction: column;
@@ -49,7 +50,8 @@
                 display: flex;
                 flex-direction: column;
                 margin-right: 20px;
-                
+                color: white;
+
                 .top{
                     font-size: 2em;
                     margin-bottom: 0;
@@ -77,6 +79,7 @@
                     .other{
                         font-weight: 100;
                         font-size: 0.9em;
+                        color: white;
                     }
                     
                 }
@@ -94,17 +97,19 @@
 
                     .other{
                         font-family: 'gistesy';
+                        color: white;
                     }
                 }
                 
             }
         }
 
-        .top{
+        .top-text{
             display: flex;
             align-items: center;
             justify-content: center;
-            margin-bottom: 30px;
+            padding: 0 40px;
+            margin: 25px 0 50px 0;
 
             img{
                 height: 200px;
@@ -112,42 +117,31 @@
                 object-fit: cover;
                 object-position: top;
                 border-radius: 50%;
-                box-shadow: rgba(0, 0, 0, 0.19) 0px 10px 20px, rgba(0, 0, 0, 0.23) 0px 6px 6px;
+                box-shadow: rgb(0 0 0 / 37%) 0px 10px 20px, rgb(0 0 0 / 38%) 0px 6px 6px;
+                background-color: white;
             }
 
             .manager-data{
                 display: flex;
                 flex-direction: column;
                 margin-left: 20px;
-
-                .label{
-                    color: #f56f36;
-                    font-weight: 900;
-                    margin-bottom: 20px;
-
-                    span{
-                        padding: 6px 12px;
-                        background: #15385c;
-                        color: white;
-                        margin-right: 4px;
-                        font-weight: 100;
-                        border-radius: 2px;
-                        font-style: italic;
-                    }
-                }
+                color: white;
 
                 .name{
                     font-weight: 700;
-                    color: black
+                    color: #f56f36;
+                    font-size: 1.4em;
                 }
             }
         }
 
-        .bottom{
+        .bottom-text{
             display: flex;
             flex-direction: column;
             width: 100%;
-        
+            padding: 0 40px;
+            background: white;
+
             .header{
                 color: #f56f36;
                 font-size: 1.2em;
@@ -197,7 +191,6 @@
                 }
             }
         }
-
     }
 }
 
@@ -225,11 +218,12 @@
 
         .content{
             width: 100%;
-            padding: 0 20px;
-            .top{
+            
+            .top-text{
                 margin-bottom: 10px;
                 flex-direction: column;
                 text-align: center;
+                padding: 0 20px;
 
                 img{
                     width: 180px;
@@ -245,6 +239,10 @@
                         margin-bottom: 10px;
                     }
                 }
+            }
+
+            .bottom-text{
+                padding: 0 20px;
             }
         }
     }
