--- a/src/app/components/program/program.component.scss
+++ b/src/app/components/program/program.component.scss
@@ -5,7 +5,7 @@ $colorBlue: #15385c;
     justify-content: center;
     align-items: center;
     flex-direction: column;
-
+    
     .title{
         width: 100%;
         height: 60vh;
@@ -41,6 +41,7 @@ $colorBlue: #15385c;
             }
         }
     }
+    
     .program-top{
         width: 100%;
         padding-top: 3em;
@@ -141,6 +142,7 @@ $colorBlue: #15385c;
         flex-direction: column;
         align-items: center;
         width: 100%;
+        margin-bottom: 5em;
 
         .image-texts{
             display: flex;
