--- a/src/app/components/home-program/home-program.component.html
+++ b/src/app/components/home-program/home-program.component.html
@@ -29,7 +29,7 @@
 
         </div>
         
-        <p class="call-to-donate">Soutenez le candidat Yves Tsala en <span routerLink="/faire-un-don">faisant un don</span></p>
+        <p class="call-to-donate">Soutenez le candidat Yves Tsala en <span routerLink="/faire-un-don"> <i class="pi pi-heart"></i> faisant un don</span></p>
     </div>
     <img src="../../assets/img/home/program/program.jpeg" alt="">
 </div>
