--- a/src/app/components/home-about/home-about.component.scss
+++ b/src/app/components/home-about/home-about.component.scss
@@ -76,8 +76,8 @@ $color: #15385c;
             align-items: center;
             text-align: center;
             margin-top: 30px;
-            padding:0;
-
+            padding: 25px 15px;
+            
             .header{
                 font-size: 1.3em;
                 text-align: center;
