--- a/src/app/components/program-short/program-short.component.scss
+++ b/src/app/components/program-short/program-short.component.scss
@@ -55,6 +55,10 @@ $colorBlue: #15385c;
         width: 100%;
         height: 100%;
 
+        p-accordion{
+            width: 100%;
+        }
+
         .p-accordion .p-accordion-header .p-accordion-header-link {
             color: #ffffff;
             background: #15385d;
@@ -150,9 +154,10 @@ $colorBlue: #15385c;
             .texts{
                 display: flex;
                 flex-direction: column;
+                width: 100%;
 
                 p{
-                    text-align: justify;
+                    text-align: center;
                     margin-bottom: 7px;
                 }
             }
