--- a/src/app/components/agenda/agenda.component.scss
+++ b/src/app/components/agenda/agenda.component.scss
@@ -88,6 +88,7 @@ $colorBlue: #15385c;
                                 flex-direction: column;
                                 margin-right: 40px;
                                 padding: 10px;
+                                flex: 1;
 
                                 .header{
                                     font-size: 1.3em;
@@ -127,42 +128,27 @@ $colorBlue: #15385c;
                             }
             
                             img{
-                                object-fit: cover;
-                                width: 250px;
-                                height: 200px;
+                                object-fit: cover;                            
+                                width: 310px;
+                                height: 180px;
                                 border-radius: 5px;
                             }
                         }
                     }
-    
     }
 }
 
 @media all and (max-width: 1120px){
-
     .agenda{
-
         .content{
-
             .events{
-
                 max-width: 90%;
-
-                .event{
-                    img{
-                        height: 160px;
-                    }
-                }
-
             }
-        
         }
-   
     }
 }
 
 @media all and (max-width: 880px){
-
     .agenda{
         .content{
             .events{
@@ -183,18 +169,13 @@ $colorBlue: #15385c;
                     align-items: center;
 
                     img{
-                        width: 370px;;
-                        height: 200px;
                         margin-bottom: 15px;
                     }
 
                     .left{
                         margin: 0;
                         align-items: center;
-                        
                     }
-
-                    
                 }
             }
         }
@@ -234,7 +215,7 @@ $colorBlue: #15385c;
                     width: 100%;
                     img{
                         width: 100%;
-                        height: 160px;
+                        height: 210px;
                         margin-bottom: 15px;
                     }
 
@@ -242,11 +223,57 @@ $colorBlue: #15385c;
                         width: 100%;
                         
                     }
-
-                    
                 }
             }
         }
-   
+    }
+}
+
+@media all and (max-width: 425px){
+
+    .agenda{
+        .content{
+            .events{
+                .event{
+                    img{
+                        width: 100%;
+                        height: 210px;
+                        margin-bottom: 15px;
+                    }
+                }
+            }
+        }
+    }
+}
+
+@media all and (max-width: 375px){
+    .agenda{
+        .content{
+            .events{
+                .event{
+                    img{
+                        width: 100%;
+                        height: 185px;
+                        margin-bottom: 15px;
+                    }
+                }
+            }
+        }
+    }
+}
+
+@media all and (max-width: 320px){
+    .agenda{
+        .content{
+            .events{
+                .event{
+                    img{
+                        width: 100%;
+                        height: 165px;
+                        margin-bottom: 15px;
+                    }
+                }
+            }
+        }
     }
 }
