--- a/src/app/components/infinite-scroll-argument/infinite-scroll-argument.component.scss
+++ b/src/app/components/infinite-scroll-argument/infinite-scroll-argument.component.scss
@@ -36,7 +36,7 @@
                     width: 100%;
                     height: 15em;
                     object-fit: cover;
-                    object-position: top;
+                    object-position: top center;
                 }
     
                 .texts{
